docs: postpone one-process execution until Java 22 is ordinary for Flix
The note here recommended having the shim exec the compiler on a plan stage 0
hands back. That is superseded: "Java has no exec(2)" stopped being true in
Java 22, and java.lang.foreign reaches execv directly -- verified to replace
the image, same pid, arguments delivered verbatim with no shell requoting.
Doing it inside the JVM needs no plan protocol, no eval, and no new logic in
the two files that own one decision each.

Decided to postpone rather than build it. The blocker is not which JVM runs
stage 0 -- flixw already steers that -- but that stage 0 must go on compiling
at --release MIN_JAVA while Linker is preview there, so the code would have to
live in a companion asset compiled at 22+. That is worth doing once Flix's own
floor moves, and not before.

Provisioning a JDK to obtain it early was considered and declined: it reverses
the decision that an automatic fetch is the wrong answer to a missing
dependency, inverts the shims' deliberate last-resort precedence for a
flixw-installed JDK, and would make signal semantics depend on whether a JDK
happened to be provisioned -- one machine where Ctrl-C behaves and one where it
does not, in a change whose whole purpose is behaviour.

Also drops the memory framing. The ratios are recorded because someone will ask
for them, but 22.6 MB against 825 is not why this is worth doing; SIGKILL
orphaning the compiler is, and that is the failure awaitWithReaper documents
and cannot fix.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>